index.css
body {
	margin: 0;
	font-family: sans-serif;
}

h1 {
	color: white;
	text-align: center;
}

header {
	padding: 10px 0;
	background: black;
}

main {
	background: blue;
	display: flex;
	flex-wrap: wrap;
	align-items: stretch;
}

.tinyThingContainer {
	flex-basis: 200px;
	flex-grow: 1;
	aspect-ratio: 1 / 1;
	background: white;
	outline: 4px dashed black;
}

.label {
	position: absolute;
	padding: 5px;
	width: 180px;
	background: white;
	text-align: center;
}

